--- a/view/login.ejs
+++ b/view/login.ejs
@@ -16,7 +16,7 @@
 	</head>
 	<body>
 
-	<nav class="navbar navbar-light  ">
+	<!-- <nav class="navbar navbar-light  ">
 	<a class="navbar-brand"><img class="w-50"src="./img/logo.png"></a>
 	<form class="form-inline" action="/autenticar" method="post">
 
@@ -29,9 +29,9 @@
 	<input class="form-control mr-sm-2 border-dark" name="senha" type="password" id="senha-login" placeholder="senha" >
 	<button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Logar</button>
 	</form>
-	</nav>
+	</nav> -->
 
-			<% if(validacao.length > 0){ %>
+			<!-- <% if(validacao.length > 0){ %>
 					<div class="alert alert-danger">
 						<strong>Atenção!</strong>
 						<ul>
@@ -40,7 +40,7 @@
 							<% } %>
 						</ul>
 					</div>
-				<% } %>
+				<% } %> -->
 
 	<header>
 	<div class="container">
